# bmstu-oop

./: .gitignore  README.md
lab_02/: CMakeLists.txt  Readme.md  main.cpp
lab_02/declarations/: const_iterator.hpp  exceptions.hpp  iterator.hpp  matrix.hpp  matrix_base.hpp
lab_02/implementations/: const_iterator.inl  exceptions.inl  iterator.inl  matrix_access_operators.inl  matrix_assign_operators.inl  matrix_base.cpp  matrix_checkers.inl  matrix_construct.inl  matrix_fill.inl  matrix_iter.inl  matrix_math.inl  matrix_operations.inl  matrix_private_methods.inl  matrix_restruct.inl  matrix_row.inl
lab_02/tests/: assign_operator_tests.hpp  constructor_tests.hpp  fill_tests.hpp  matrix_iterator_tests.hpp  matrix_tests.hpp  restruct_tests.hpp  tests_matrix_access_operators.inl  tests_matrix_assign_operator.inl  tests_matrix_construct.inl  tests_matrix_filling.inl  tests_matrix_iterators.inl  tests_matrix_math.inl  tests_matrix_operations.inl  tests_matrix_restruct.inl
lab_03/: CMakeLists.txt  main.cpp  readme.md
lab_03/gui/qt/: design.h  mainwindow.cpp  mainwindow.h
lab_03/gui/qt/drawer/: qt_drawer.cpp  qt_drawer.hpp
lab_03/gui/qt/drawer/factory/: qt_drawer_factory.cpp  qt_drawer_factory.hpp
lab_03/gui/qt/ui/: design.ui
lab_03/implementation/: CMakeLists.txt
lab_03/implementation/commands/: CMakeLists.txt  command.hpp
lab_03/implementation/commands/camera/: CMakeLists.txt  camera_command.hpp
lab_03/implementation/commands/camera/add/: add_camera.cpp  add_camera.hpp
lab_03/implementation/commands/camera/count/: count_cameras.cpp  count_cameras.hpp
lab_03/implementation/commands/camera/load/: load_camera.cpp  load_camera.hpp
lab_03/implementation/commands/camera/move/: move_camera.cpp  move_camera.hpp
lab_03/implementation/commands/camera/remove/: remove_camera.cpp  remove_camera.hpp
lab_03/implementation/commands/camera/set/: set_camera.cpp  set_camera.hpp
lab_03/implementation/commands/camera_commands/remove_camera/: remove_camera.cpp
lab_03/implementation/commands/camera_commands/set_camera/: set_camera.cpp  set_camera.hpp
lab_03/implementation/commands/model/: CMakeLists.txt  model_command.hpp
lab_03/implementation/commands/model/add/: add_model.cpp  add_model.hpp
lab_03/implementation/commands/model/count/: count_models.cpp  count_models.hpp
lab_03/implementation/commands/model/load/: load_model.cpp  load_model.hpp
lab_03/implementation/commands/model/move/: move_model.cpp  move_model.hpp
lab_03/implementation/commands/model/remove/: remove_model.cpp
lab_03/implementation/commands/model/rotate/: rotate_model.cpp
lab_03/implementation/commands/model/scale/: scale_model.cpp  scale_model.hpp
lab_03/implementation/commands/model/transform/: transform_model.cpp  transform_model.hpp
lab_03/implementation/commands/scene/: CMakeLists.txt
lab_03/implementation/commands/scene/draw/: render_scene.hpp
lab_03/implementation/commands/scene_commands/: scene_command.hpp
lab_03/implementation/config_manager/: CMakeLists.txt  config_manager.cpp  config_manager.hpp
lab_03/implementation/config_manager/creator/: config_manager_creator.cpp  config_manager_creator.hpp
lab_03/implementation/config_manager/registration/: registration_maker.cpp  registration_maker.hpp
lab_03/implementation/config_manager/solution/: solution.cpp  solution.hpp
lab_03/implementation/drawer/: CMakeLists.txt  drawer.hpp
lab_03/implementation/drawer/qt/: qt_drawer.hpp
lab_03/implementation/exceptions/: CMakeLists.txt  base_exception.hpp  camera_exceptions.hpp  load_exceptions.hpp  model_exceptions.hpp  ui_exceptions.hpp
lab_03/implementation/facade/: CMakeLists.txt  facade.cpp  facade.hpp
lab_03/implementation/load/: CMakeLists.txt
lab_03/implementation/load/builders/: CMakeLists.txt
lab_03/implementation/load/controllers/: CMakeLists.txt  load_controller.hpp
lab_03/implementation/load/directors/: CMakeLists.txt  load_director.hpp
lab_03/implementation/load/loaders/: object_loader.hpp  object_loader_creator.hpp
lab_03/implementation/load/solutions/: CMakeLists.txt
lab_03/implementation/load/source_loaders/: CMakeLists.txt  source_loader.hpp  source_loader_creator.hpp
lab_03/implementation/managers/: CMakeLists.txt  manager.hpp
lab_03/implementation/managers/creator/: base_manager_creator.cpp  manager_creator.hpp
lab_03/implementation/managers/draw/: draw_manager.cpp  draw_manager.hpp
lab_03/implementation/managers/load/: load_manager.cpp  load_manager.hpp
lab_03/implementation/managers/load_manager/: load_manager.hpp
lab_03/implementation/managers/manager_creator/: base_manager_creator.hpp
lab_03/implementation/managers/scene/: scene_manager.cpp  scene_manager.hpp
lab_03/implementation/managers/scene_manager/: scene_manager.cpp
lab_03/implementation/managers/transform/: transform_manager.cpp  transform_manager.hpp
lab_03/implementation/objects/: CMakeLists.txt  object.hpp
lab_03/implementation/objects/camera/: camera.cpp  camera.hpp
lab_03/implementation/objects/composite/: composite.cpp  composite.hpp
lab_03/implementation/objects/model/: model.cpp  model.hpp
lab_03/implementation/scene/: CMakeLists.txt  scene.cpp  scene.hpp
lab_03/implementation/scene/director/: scene_director.cpp  scene_director.hpp
lab_03/implementation/scene/loaders/: scene_loader.hpp  scene_loader_creator.hpp
lab_03/implementation/scene/solution/: scene_load_solution.cpp  scene_load_solution.hpp
lab_03/implementation/visitor/: CMakeLists.txt  visitor.hpp
lab_03/implementation/visitor/draw_visitor/: draw_visitor.cpp  draw_visitor.hpp
lab_04/: CMakeLists.txt  main.cpp
lab_04/gui/includes/: design.h  mainwindow.h
lab_04/gui/src/: mainwindow.cpp
lab_04/gui/ui/: main_window.ui
lab_04/implementation/: CMakeLists.txt  constants.h
lab_04/implementation/cabin/: cabin.cpp  cabin.h
lab_04/implementation/control_panel/: control_panel.cpp  control_panel.h
lab_04/implementation/controller/: controller.cpp  controller.h
lab_04/implementation/doors/: doors.cpp  doors.h
lab_04/implementation/elevator/: elevator.cpp  elevator.h
(+114 files in other folders)
